# rstudio-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 2026-03-28-connection-guidance-design.md
src/rstudio_mcp/: config.py  r_client.py  rserve_client.py  server.py
src/rstudio_mcp/tools/: execution.py  filesystem.py  session.py
tests/: conftest.py  test_config.py  test_r_client.py  test_rserve_client.py  test_server.py  test_tools_execution.py  test_tools_filesystem.py  test_tools_session.py
