[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rstudio-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyRserve>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
rstudio-mcp = "rstudio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rstudio_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
